--- a/www/index.html
+++ b/www/index.html
@@ -12,7 +12,20 @@
   <title>Scholarship</title>
  </head>
  <body>
-  <!--page movie list-->
+     <div data-role="page" id="page-home">
+         <div data-role="header" style="padding: 10px">
+             Home Page
+         </div>
+         <div data-role="ui-content" class="nav-glyphish-example" data-theme="b" >
+            <div data-role="navbar" class="nav-glyphish-example" data-grid="b" style="background-color:#3A7BD5">
+                <ul>
+                    <li><a href="#" id="chat" data-icon="bullets">Scholarships</a></li>
+                    <li><a href="#" id="email" data-icon="home">Universities</a></li>
+                    <li><a href="#" id="skull" data-icon="calendar">Majors</a></li>
+                </ul>
+            </div>
+        </div>
+     </div>
   
   <script type="text/javascript" src="cordova.js"></script>
   <script type="text/javascript" src="js/core/app.js"></script>
