--- a/www/index.html
+++ b/www/index.html
@@ -1,40 +1,56 @@
 <!DOCTYPE html>
 <html>
- <head>
-  <!--<meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com; style-src 'self' 'unsafe-inline'; media-src *">-->
-  <meta name="format-detection" content="telephone=no">
-  <meta name="msapplication-tap-highlight" content="no">
-  <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
-  <link rel="stylesheet" type="text/css" href="css/index.css">
-  <link href="css/libs/jquery.mobile-1.4.5.min.css" rel="stylesheet" type="text/css"/>
-  <link href="css/site.css" rel="stylesheet" type="text/css"/>
-  <script src="js/libs/jquery-1.11.3.min.js" type="text/javascript"></script>
-  <script src="js/libs/jquery.mobile-1.4.5.min.js" type="text/javascript"></script>
-  <title>Scholarship</title>
- </head>
- <body>
-     <div data-role="page" id="page-home" style="background: #fbfbfb;">
-         <div data-role="header" class="headerTitle">
-             Home Page
-         </div>
-         <div data-role="ui-content" class="nav-glyphish-example" data-theme="b" >
-            <div data-role="navbar" class="nav-glyphish-example headerTab" data-grid="b">
-                <ul>
-                    <li><a href="#" id="chat" data-icon="bullets">Scholarships</a></li>
-                    <li><a href="#" id="email" data-icon="home">Universities</a></li>
-                    <li><a href="#" id="skull" data-icon="calendar">Majors</a></li>
-                </ul>
-            </div>
+<head>
+    <!--<meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com; style-src 'self' 'unsafe-inline'; media-src *">-->
+    <meta name="format-detection" content="telephone=no">
+    <meta name="msapplication-tap-highlight" content="no">
+    <meta name="viewport"
+          content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
+    <link rel="stylesheet" type="text/css" href="css/index.css">
+    <link href="css/libs/jquery.mobile-1.4.5.min.css" rel="stylesheet" type="text/css"/>
+    <link href="css/site.css" rel="stylesheet" type="text/css"/>
+    <script src="js/libs/jquery-1.11.3.min.js" type="text/javascript"></script>
+    <script src="js/libs/jquery.mobile-1.4.5.min.js" type="text/javascript"></script>
+    <title>Scholarship</title>
+</head>
+<body>
+<div data-role="page" id="page-home" class="container">
+    <div data-role="header" class="headerTitle">
+        <a href="index.html" data-icon="delete" class="headerTitleLink"></a>
+        <h1>Edit Contact</h1>
+        <a href="index.html" data-icon="search" class="headerTitleLink"></a>
+    </div>
+    <div data-role="tabs" class="headerTab">
+        <div data-role="navbar" class="headerNav">
+            <ul>
+                <li><a href="#tabs-1" data-ajax="false" data-icon="bullets" class="headerNavLink">Scholarships</a></li>
+                <li><a href="#tabs-2" data-ajax="false" data-icon="home" class="headerNavLink">Universities</a></li>
+                <li><a href="#tabs-3" data-ajax="false" data-icon="calendar" class="headerNavLink">Majors</a></li>
+            </ul>
         </div>
-     </div>
+        <div id="tabs-1" class="ui-content">
+            <h1>First tab contents</h1>
+        </div>
+        <div id="tabs-2" class="ui-content">
+            <h1>Second tab contents</h1>
+        </div>
+        <div id="tabs-3" class="ui-content">
+            <h1>Third tab contents</h1>
+        </div>
+    </div>
 
-  <script type="text/javascript" src="cordova.js"></script>
-  <script type="text/javascript" src="js/core/app.js"></script>
-  <script src="js/core/app_template.js" type="text/javascript"></script>
-  <script src="js/core/app_cache.js" type="text/javascript"></script>
-  <script src="js/libs/handlebars-v4.0.2.js" type="text/javascript"></script>
-  <script type="text/javascript">
-        App.onDeviceReady();
-  </script>
- </body>
+
+</div>
+<script type="text/javascript" src="cordova.js"></script>
+<script type="text/javascript" src="js/core/app.js"></script>
+<script src="js/core/app_template.js" type="text/javascript"></script>
+<script src="js/core/app_cache.js" type="text/javascript"></script>
+<script src="js/libs/handlebars-v4.0.2.js" type="text/javascript"></script>
+<script type="text/javascript">
+    App.onDeviceReady();
+    $(function() {
+        $( "#tabs" ).tabs();
+    });
+</script>
+</body>
 </html>
