--- a/www/index.html
+++ b/www/index.html
@@ -1,39 +1,54 @@
 <!DOCTYPE html>
 <html>
- <head>
-  <!--<meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com; style-src 'self' 'unsafe-inline'; media-src *">-->
-  <meta name="format-detection" content="telephone=no">
-  <meta name="msapplication-tap-highlight" content="no">
-  <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
-  <link rel="stylesheet" type="text/css" href="css/index.css">
-  <link href="css/libs/jquery.mobile-1.4.5.min.css" rel="stylesheet" type="text/css"/>
-  <script src="js/libs/jquery-1.11.3.min.js" type="text/javascript"></script>
-  <script src="js/libs/jquery.mobile-1.4.5.min.js" type="text/javascript"></script>
-  <title>Scholarship</title>
- </head>
- <body>
-     <div data-role="page" id="page-home">
-         <div data-role="header" style="padding: 10px">
-             Home Page
-         </div>
-         <div data-role="ui-content" class="nav-glyphish-example" data-theme="b" >
-            <div data-role="navbar" class="nav-glyphish-example" data-grid="b" style="background-color:#3A7BD5">
-                <ul>
-                    <li><a href="#" id="chat" data-icon="bullets">Scholarships</a></li>
-                    <li><a href="#" id="email" data-icon="home">Universities</a></li>
-                    <li><a href="#" id="skull" data-icon="calendar">Majors</a></li>
-                </ul>
+    <head>
+        <!--<meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com; style-src 'self' 'unsafe-inline'; media-src *">-->
+        <meta name="format-detection" content="telephone=no">
+        <!--<meta name="msapplication-tap-highlight" content="no">-->
+        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
+        <link rel="stylesheet" type="text/css" href="css/index.css">
+        <link href="css/libs/jquery.mobile-1.4.5.min.css" rel="stylesheet" type="text/css"/>
+        <script src="js/libs/jquery-1.11.3.min.js" type="text/javascript"></script>
+        <script src="js/libs/jquery.mobile-1.4.5.min.js" type="text/javascript"></script>
+        <title>Scholarship</title>
+        <style>
+            .ui-listview li {
+                width: 100% !important;
+                margin-bottom: 10px !important;
+                float: left;
+                /*border: 1px solid #ccc !important;*/
+                box-shadow: 0 2px 3px rgba(0, 0, 0, 0.25);
+                background: white !important;
+            }
+            .ui-listview li a {
+                background: white !important;
+            }
+        </style>
+    </head>
+    <body>
+        <div data-role="page" id="page-home">
+            <div data-role="header" style="padding: 10px">
+                Home Page
+            </div>
+            <div data-role="ui-content" class="nav-glyphish-example" data-theme="b" >
+                <div data-role="navbar" class="nav-glyphish-example" data-grid="b">
+                    <ul>
+                        <li><a href="#page-scholarship-list" id="scholoarship" data-icon="bullets">Scholarships</a></li>
+                        <li><a href="#" id="email" data-icon="home">Universities</a></li>
+                        <li><a href="#" id="skull" data-icon="calendar">Majors</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
-     </div>
-  
-  <script type="text/javascript" src="cordova.js"></script>
-  <script type="text/javascript" src="js/core/app.js"></script>
-  <script src="js/core/app_template.js" type="text/javascript"></script>
-  <script src="js/core/app_cache.js" type="text/javascript"></script>
-  <script src="js/libs/handlebars-v4.0.2.js" type="text/javascript"></script>
-  <script type="text/javascript">
-        App.onDeviceReady();
-  </script>
- </body>
+        <div data-role="page" id="page-scholarship-list">            
+        </div>
+        <script type="text/javascript" src="cordova.js"></script>
+        <script type="text/javascript" src="js/core/app.js"></script>
+        <script src="js/core/app_template.js" type="text/javascript"></script>
+        <script src="js/core/app_cache.js" type="text/javascript"></script>
+        <script src="js/libs/handlebars-v4.0.2.js" type="text/javascript"></script>
+        <script src="js/app/model/scholarship_model.js" type="text/javascript"></script>
+        <script type="text/javascript">
+            App.onDeviceReady();
+        </script>
+    </body>
 </html>
