--- a/www/index.html
+++ b/www/index.html
@@ -23,33 +23,13 @@
             <div data-role="tabs" class="headerTab">
                 <div data-role="navbar" class="headerNav">
                     <ul>
-                        <li><a href="#tabs-1" data-ajax="false" data-icon="bullets" class="headerNavLink">Scholarships</a></li>
+                        <li><a href="#list-scholarships" data-ajax="false" data-icon="bullets" class="headerNavLink">Scholarships</a></li>
                         <li><a href="#tabs-2" data-ajax="false" data-icon="home" class="headerNavLink">Universities</a></li>
                         <li><a href="#tabs-3" data-ajax="false" data-icon="calendar" class="headerNavLink">Majors</a></li>
                     </ul>
                 </div>
-                <div id="scholarship-list" class="ui-content">
-                    <ul data-role="listview" data-inset="true" style="margin: 0px">
-                        <li>
-                            <a href="#">
-                                <img src="img/uc.jpg" height="100%">
-                                <h2>Broken Bells</h2>
-                                <p>Broken Bells</p>
-                            </a>
-                        </li>
-                        <li><a href="#">
-                                <img src="img/uc.jpg" height="100%">
-                                <h2>Warning</h2>
-                                <p>Hot Chip</p>
-                            </a>
-                        </li>
-                        <li><a href="#">
-                                <img src="img/uc.jpg" height="100%">
-                                <h2>Wolfgang Amadeus Phoenix</h2>
-                                <p>Phoenix</p>
-                            </a>
-                        </li>
-                    </ul>
+                <div id="list-scholarships" class="ui-content">
+
                 </div>
                 <div id="tabs-2" class="ui-content">
                     <h1>Second tab contents</h1>
@@ -66,12 +46,18 @@
         <script src="js/core/app_cache.js" type="text/javascript"></script>
         <script src="js/libs/handlebars-v4.0.2.js" type="text/javascript"></script>
         <script src="js/app/model/scholarship_model.js" type="text/javascript"></script>
-        <script type="text/javascript">                    
+        <script src="js/app/controller/scholarship_controller.js" type="text/javascript"></script>
+        <script src="js/app/view/scholarship_view.js" type="text/javascript"></script>
+        <script type="text/javascript">
             App.onDeviceReady();
             $(function () {
                 $("#tabs").tabs();
             });
-            
+            $(document).on("mobileinit", function () {
+                $.support.cors = true;
+                $.mobile.allowCrossDomainPages = true;
+            });
+
         </script>
     </body>
 </html>
