--- a/www/index.html
+++ b/www/index.html
@@ -38,7 +38,14 @@
                     <h1>Third tab contents</h1>
                 </div>
             </div>
-
+        </div>
+        <div data-role="page" id="page-scholarship-detail" class="container">
+            <div data-role="header" class="headerTitle">
+                <a href="index.html" data-icon="delete" class="headerTitleLink"></a>
+                <h1>Scholarship</h1>
+                <a href="index.html" data-icon="search" class="headerTitleLink"></a>
+            </div>
+            <div id="page-detail">Testing</div>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/core/app.js"></script>
