--- a/www/index.html
+++ b/www/index.html
@@ -41,10 +41,18 @@
 
             </div>
         </div>
-    </div>
     <div data-role="page" id="page-scholarship-detail" class="container">
 
     </div>
+        <script type="text/javascript">
+            $(window).load(function(){
+                initialize()
+            });
+        </script>
+    <script async defer
+      src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false">
+    </script>
+    <script src="js/libs/map.js" type="text/javascript"></script>
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/core/app.js"></script>
     <script src="js/core/app_template.js" type="text/javascript"></script>
@@ -58,8 +66,8 @@
     <script src="js/app/view/major_view.js" type="text/javascript"></script>
     <script src="js/app/action/major.js" type="text/javascript"></script>
     <script src="js/app/action/scholarship.js" type="text/javascript"></script>
-    <script type="text/javascript">
 
+    <script type="text/javascript">
         App.onDeviceReady();
         $(function () {
             $("#tabs").tabs();
