Update contact for scholarship detail

--- a/www/index.html
+++ b/www/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html> 
     <head>
+        <meta charset="UTF-8">
         <!--<meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com; style-src 'self' 'unsafe-inline'; media-src *">-->
         <meta name="format-detection" content="telephone=no">
         <!--<meta name="msapplication-tap-highlight" content="no">-->
@@ -68,6 +69,8 @@
         <script src="js/app/model/requirement_model.js" type="text/javascript"></script>
         <script src="js/app/model/scholarship_detail_model.js" type="text/javascript"></script>
         <script src="js/app/view/scholarshipdetail_view.js" type="text/javascript"></script>
+        <script src="js/app/model/contact_model.js" type="text/javascript"></script>
+        <script src="js/app/view/contact_view.js" type="text/javascript"></script>
         <script type="text/javascript">
             App.onDeviceReady();
             $(function () {
