--- a/www/index.html
+++ b/www/index.html
@@ -4,12 +4,12 @@
         <!--<meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com; style-src 'self' 'unsafe-inline'; media-src *">-->
         <meta name="format-detection" content="telephone=no">
         <!--<meta name="msapplication-tap-highlight" content="no">-->
-        <meta name="viewport"
-              content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
+        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
         <link rel="stylesheet" type="text/css" href="css/index.css">
         <link href="css/card.css" rel="stylesheet" type="text/css"/>
         <link href="css/libs/jquery.mobile-1.4.5.min.css" rel="stylesheet" type="text/css"/>
         <link href="css/site.css" rel="stylesheet" type="text/css"/>
+        <link href="css/university.css" rel="stylesheet" type="text/css"/>
         <script src="js/libs/jquery-1.11.3.min.js" type="text/javascript"></script>
         <script src="js/libs/jquery.mobile-1.4.5.min.js" type="text/javascript"></script>
         <title>Scholarship</title>
@@ -25,15 +25,14 @@
                 <div data-role="navbar" class="headerNav">
                     <ul>
                         <li><a data-transition="slide" href="#list-scholarships" data-ajax="false" data-icon="bullets" class="headerNavLink" >Scholarships</a></li>
-                        <li><a data-transition="slide" href="#tabs-2" data-ajax="false" data-icon="home" class="headerNavLink">Universities</a></li>
+                        <li><a data-transition="slide" href="#list-university" data-ajax="false" data-icon="home" class="headerNavLink">Universities</a></li>
                         <li id="major-list"><a data-transition="slide" href="#list-majors" data-ajax="false" data-icon="calendar" class="headerNavLink">Majors</a></li>
                     </ul>
                 </div>
                 <div id="list-scholarships" class="ui-content" data-transition="slide">
 
                 </div>
-                <div id="tabs-2" class="ui-content" data-transition="slide">
-                    <h1>Second tab contents</h1>
+                <div id="list-university" class="ui-content" data-transition="slide">
                 </div>
                 <div id="list-majors" class="ui-content" data-transition="slide">
 
@@ -66,7 +65,10 @@
     <script src="js/app/view/major_view.js" type="text/javascript"></script>
     <script src="js/app/action/major.js" type="text/javascript"></script>
     <script src="js/app/action/scholarship.js" type="text/javascript"></script>
-
+    <script src="js/app/action/university.js" type="text/javascript"></script>
+    <script src="js/app/controller/university_controller.js" type="text/javascript"></script>
+    <script src="js/app/model/university_model.js" type="text/javascript"></script>
+    <script src="js/app/view/university_view.js" type="text/javascript"></script>
     <script type="text/javascript">
         App.onDeviceReady();
         $(function () {
