--- a/www/index.html
+++ b/www/index.html
@@ -24,7 +24,7 @@
             <div data-role="tabs" class="headerTab" >
                 <div data-role="navbar" class="headerNav">
                     <ul>                        
-                        <li><a href="#tabs-2" data-ajax="false" data-icon="home" class="headerNavLink">សាកលវិទ្យាល័យ</a></li>
+                        <li><a href="#list-university" data-ajax="false" data-icon="home" class="headerNavLink">សាកលវិទ្យាល័យ</a></li>
                         <li id="major-list"><a href="#list-majors" data-ajax="false" data-icon="calendar" class="headerNavLink">ជំនាញ</a></li>
                         <li id="scholarship-tab"><a href="#list-scholarships" data-ajax="false" data-icon="bullets" class="headerNavLink" >អាហារូបករណ៍</a></li>
                     </ul>
