--- a/www/index.html
+++ b/www/index.html
@@ -17,14 +17,13 @@
     </head>
     <body>
         <div data-role="page" id="page-home" class="container">
-            <div data-role="header" class="headerTitle">
-                <a href="index.html" data-icon="back" class="headerTitleLink"></a>
+            <div data-role="header" class="headerTitle">                
                 <h1 id="header-title">សាកលវិទ្យាល័យ</h1>
             </div>
             <div data-role="tabs" class="headerTab" >
                 <div data-role="navbar" class="headerNav">
                     <ul>                        
-                        <li><a href="#list-university" data-ajax="false" data-icon="home" class="headerNavLink">សាកលវិទ្យាល័យ</a></li>
+                        <li id="university-tab"><a href="#list-university" data-ajax="false" data-icon="home" class="headerNavLink">សាកលវិទ្យាល័យ</a></li>
                         <li id="major-list"><a href="#list-majors" data-ajax="false" data-icon="calendar" class="headerNavLink">ជំនាញ</a></li>
                         <li id="scholarship-tab"><a href="#list-scholarships" data-ajax="false" data-icon="bullets" class="headerNavLink" >អាហារូបករណ៍</a></li>
                     </ul>
