--- a/www/index.html
+++ b/www/index.html
@@ -17,26 +17,25 @@
     </head>
     <body>
         <div data-role="page" id="page-home" class="container">
-            <div data-role="header" class="headerTitle">                
+            <div data-role="header" class="headerTitle" data-position="fixed">                
                 <h1 id="header-title">សាកលវិទ្យាល័យ</h1>
             </div>
-            <div data-role="tabs" class="headerTab" >
-                <div data-role="navbar" class="headerNav">
+            <div data-role="tabs" class="headerTab">
+                <div data-role="navbar" class="headerNav" style="">
                     <ul>                        
                         <li id="university-tab"><a href="#list-university" data-ajax="false" data-icon="home" class="headerNavLink">សាកលវិទ្យាល័យ</a></li>
                         <li id="major-list"><a href="#list-majors" data-ajax="false" data-icon="calendar" class="headerNavLink">ជំនាញ</a></li>
                         <li id="scholarship-tab"><a href="#list-scholarships" data-ajax="false" data-icon="bullets" class="headerNavLink" >អាហារូបករណ៍</a></li>
                     </ul>
                 </div>
-                <div id="list-scholarships" class="ui-content" data-transition="slide">
+                <div id="list-scholarships" class="ui-content nav-content">
 
                 </div>
-                <div id="list-university" class="ui-content" data-transition="slide">
+                <div id="list-university" class="ui-content nav-content">
                 </div>
-                <div id="list-majors" class="ui-content" data-transition="slide">
+                <div id="list-majors" class="ui-content nav-content">
 
                 </div>
-
             </div>
         </div>
         <div data-role="page" id="page-scholarship-detail" class="container">
