--- a/www/index.html
+++ b/www/index.html
@@ -6,7 +6,7 @@
         <meta name="format-detection" content="telephone=no">
         <!--<meta name="msapplication-tap-highlight" content="no">-->
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
-        <link rel="stylesheet" type="text/css" href="css/index.css">
+        <!--<link rel="stylesheet" type="text/css" href="css/index.css">-->
         <link href="css/card.css" rel="stylesheet" type="text/css"/>
         <link href="css/libs/jquery.mobile-1.4.5.min.css" rel="stylesheet" type="text/css"/>
         <link href="css/site.css" rel="stylesheet" type="text/css"/>
@@ -18,25 +18,23 @@
     <body>
         <div data-role="page" id="page-home" class="container">
             <div data-role="header" class="headerTitle" data-position="fixed">
+                <!--<a id="search-button" href="#" class="ui-btn-right ui-btn ui-icon-search ui-btn-icon-notext ui-shadow ui-corner-all" style="margin-top: 5px">Search</a>-->
                 <h1 id="header-title">សាកលវិទ្យាល័យ</h1>
+                <div id="search-container" style=""><input id="search-university" class="search-class" data-type="search" data-mini="true" ></div>
             </div>
             <div data-role="tabs" class="headerTab">
                 <div data-role="navbar" class="headerNav" style="">
                     <ul>                        
-                        <li id="university-tab"><a href="#list-university" data-ajax="false" data-icon="home" class="headerNavLink">សាកលវិទ្យាល័យ</a></li>
+                        <li id="university-tab"><a href="#list-university" data-ajax="false" data-icon="home" class="headerNavLink ui-btn-active">សាកលវិទ្យាល័យ</a></li>
                         <li id="major-list"><a href="#list-majors" data-ajax="false" data-icon="calendar" class="headerNavLink">ជំនាញ</a></li>
                         <li id="scholarship-tab"><a href="#list-scholarships" data-ajax="false" data-icon="bullets" class="headerNavLink" >អាហារូបករណ៍</a></li>
                     </ul>
                 </div>
-                <div id="list-scholarships" class="ui-content nav-content">
-
-                </div>
-                <div id="list-university" class="ui-content nav-content">
-                </div>
-                <div id="list-majors" class="ui-content nav-content">
-
-                </div>
-            </div>
+                
+                <div id="list-university" class="ui-content nav-content"></div>
+                <div id="list-majors" class="ui-content nav-content"></div>
+                <div id="list-scholarships" class="ui-content nav-content"></div>
+            </div>            
         </div>
         <div data-role="page" id="page-scholarship-detail" class="container">
 
@@ -80,7 +78,19 @@
             $(document).on("mobileinit", function () {
                 $.support.cors = true;
                 $.mobile.allowCrossDomainPages = true;
-            });            
+            }); 
+//            $("#page-home").on("pagebeforeshow",function(){
+//                $("#search-container").hide();
+//            });
+//            $("#search-button").on("click",function(){
+//                if($('#search-container').is(':hidden')){
+//                    $("#search-container").slideDown();
+//                }else{
+//                    $("#search-container").slideUp();
+//                }
+//                
+//            });
+            
         </script>
     </body>
 </html>
