add MVC University Detail

--- a/www/index.html
+++ b/www/index.html
@@ -37,7 +37,8 @@
             </div>            
         </div>
         <div data-role="page" id="page-scholarship-detail" class="container">
-
+        </div>
+        <div data-role="page" id="page-university-detail" class="container">
         </div>
         <script type="text/javascript">
             $(window).load(function () {
@@ -79,18 +80,6 @@
                 $.support.cors = true;
                 $.mobile.allowCrossDomainPages = true;
             }); 
-//            $("#page-home").on("pagebeforeshow",function(){
-//                $("#search-container").hide();
-//            });
-//            $("#search-button").on("click",function(){
-//                if($('#search-container').is(':hidden')){
-//                    $("#search-container").slideDown();
-//                }else{
-//                    $("#search-container").slideUp();
-//                }
-//                
-//            });
-            
         </script>
     </body>
 </html>
