--- a/www/index.html
+++ b/www/index.html
@@ -16,17 +16,13 @@
         <title>Scholarship</title>
     </head>
     <body>
-<!--        <div data-role="page" data-theme="b" id="splash" style="background-color: #fff;"> 
-            <div class="splash">
-                <img src="http://jquerymobile.com/demos/1.0a4.1/docs/_assets/images/jquery-logo.png" alt="splash" />
-            </div>
-        </div>-->
         <div data-role="page" id="page-home" class="container">
             <div data-role="header" class="headerTitle" data-position="fixed">
-                <!--<a id="search-button" href="#" class="ui-btn-right ui-btn ui-icon-search ui-btn-icon-notext ui-shadow ui-corner-all" style="margin-top: 5px">Search</a>-->
+                <a id="search-button" href="#" class="ui-btn-right ui-btn ui-icon-search ui-btn-icon-notext ui-shadow ui-corner-all" style="margin-top: 5px">Search</a>
                 <h1 id="header-title">សាកលវិទ្យាល័យ</h1>
-                <div id="search-container" style=""><input id="search-university" class="search-class" data-type="search" data-mini="true" ></div>
+                
             </div>
+            
             <div data-role="tabs" class="headerTab">
                 <div data-role="navbar" class="headerNav" style="">
                     <ul>                        
@@ -35,13 +31,16 @@
                         <li id="scholarship-tab"><a href="#list-scholarships" data-ajax="false" data-icon="bullets" class="headerNavLink" >អាហារូបករណ៍</a></li>
                     </ul>
                 </div>
-
+                <div id="search-container" style=""><input id="search-university" class="search-class" data-type="search" data-mini="true" ></div>
                 <div id="list-university" class="ui-content nav-content"></div>
                 <div id="list-majors" class="ui-content nav-content"></div>
                 <div id="list-scholarships" class="ui-content nav-content"></div>
             </div>            
         </div>
         <div data-role="page" id="page-scholarship-detail" class="container">
+
+        </div>
+        <div data-role="page" id="page-scholarship-by-major" class="container">
 
         </div>
         <script type="text/javascript">
@@ -84,24 +83,12 @@
                 $.support.cors = true;
                 $.mobile.allowCrossDomainPages = true;
             });
-//            $("#page-home").on("pagebeforeshow",function(){
-//                $("#search-container").hide();
-//            });
-//            $("#search-button").on("click",function(){
-//                if($('#search-container').is(':hidden')){
-//                    $("#search-container").slideDown();
-//                }else{
-//                    $("#search-container").slideUp();
-//                }
-//                
-//            });
-//            $(function () {
-//                setTimeout(hideSplash, 2000);
-//            });
-//
-//            function hideSplash() {
-//                $.mobile.changePage("#page-home", "fade");
-//            }
+            $(document).on("pagebeforeshow","#page-home",function(){
+                $("#search-container").hide();
+            });
+            $("#search-button").on("click", function(){
+                $("#search-container").slideToggle("fast");
+            })
         </script>
     </body>
 </html>
